Fixed bug #37205 (Serving binary content/images fails with "comm with server aborted" FastCGI err)